--- a/client/sass/_header.scss
+++ b/client/sass/_header.scss
@@ -10,7 +10,7 @@
   margin: 0;
   position: fixed;
   top: 0;
-  width: 100vw;
+  width: 100%;
 
   .portfolio-header-content {
     align-items: center;
